# OpenCV31Basic

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/venture/android/opencvbasic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: module.cpp  module.h  native-lib.cpp  nativegray.cpp
app/src/main/java/com/venture/android/opencvbasic/: MainActivity.java  PortraitCameraView.java
app/src/main/jni/: com_venture_android_opencvbasic_MainActivity.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/venture/android/opencvbasic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
